# count_code_lines

./: README.md  count_my_code.py  pyproject.toml  requirements.txt
src/count_code_lines/: __init__.py  __main__.py  app.py
